--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -158,7 +158,7 @@
                             android:layout_marginStart="5sp"
                             android:layout_width="wrap_content"
                             android:layout_height="24sp"
-                            android:text=""/>
+                            android:text="alexbrayanperezblanco@gmail.com"/>
 
 
                     </LinearLayout>
@@ -181,7 +181,7 @@
                             android:layout_marginStart="5sp"
                             android:layout_width="wrap_content"
                             android:layout_height="24sp"
-                            android:text=""/>
+                            android:text="Santa Clara Fuerte #47(AyB)"/>
 
 
                     </LinearLayout>
