--- a/app/src/main/res/layout/activity_zone.xml
+++ b/app/src/main/res/layout/activity_zone.xml
@@ -38,7 +38,7 @@
 
     <!--BFA-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:onClick="click_add_zones"
+        android:id="@+id/AZ_btn_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
