--- a/app/src/main/res/layout/li_new_zone.xml
+++ b/app/src/main/res/layout/li_new_zone.xml
@@ -23,33 +23,41 @@
                 android:id="@+id/LINZ_IV"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="10sp"
-                android:layout_marginStart="10sp"
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:src="@drawable/location_city"/>
+                app:layout_constraintBottom_toTopOf="@id/LINZ_BTN_cancel"
+                android:layout_marginStart="12sp"
+                android:layout_width="80sp"
+                android:layout_height="80sp"
+                android:src="@drawable/location_city" />
 
 
             <!--ET Name zone-->
             <EditText
-                android:layout_marginEnd="14sp"
-                android:hint="Nombre de la zona"
+                android:hint="@string/nombre_de_la_zona"
                 android:id="@+id/LINZ_ET_name"
-                android:layout_marginTop="10sp"
-                android:layout_width="0sp"
+                android:layout_marginTop="12sp"
+                android:layout_marginStart="12sp"
+                android:layout_marginEnd="12sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/LINZ_IV"
-                app:layout_constraintTop_toTopOf="@+id/LINZ_IV"/>
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:maxLength="50"
+                app:layout_constraintBottom_toTopOf="@id/LINZ_ET_price" />
 
 
             <!--ET Price zone-->
             <EditText
+                app:layout_constraintBottom_toTopOf="@id/LINZ_BTN_cancel"
                 android:id="@+id/LINZ_ET_price"
-                android:hint="Precio"
+                android:hint="@string/_0_00"
+                android:maxLength="10"
+                android:inputType="numberDecimal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/LINZ_ET_name"
-                app:layout_constraintStart_toStartOf="@+id/LINZ_ET_name"/>
+                app:layout_constraintStart_toStartOf="@+id/LINZ_ET_name" />
 
 
             <!--TV CUP-->
@@ -66,6 +74,7 @@
 
             <!--BTN cancel-->
             <Button
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/LINZ_ET_price"
                 android:id="@+id/LINZ_BTN_cancel"
@@ -74,20 +83,22 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="20sp"
-                android:layout_marginBottom="10sp"
+                android:layout_marginBottom="12sp"
+                android:layout_marginTop="12sp"
                 android:text="@string/Cancelar" />
 
 
             <!--BTN acept-->
             <Button
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/LINZ_ET_price"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/LINZ_BTN_cancel"
                 android:id="@+id/LINZ_BTN_acept"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="20sp"
-                android:layout_marginBottom="10sp"
+                android:layout_marginBottom="12sp"
                 android:text="@string/Aceptar" />
 
 
