--- a/app/src/main/res/layout/recycler_my_orders.xml
+++ b/app/src/main/res/layout/recycler_my_orders.xml
@@ -189,7 +189,7 @@
                     android:textSize="@dimen/medium"/>
 
                 <TextView
-                    android:id="@+id/RMO_zona"
+                    android:id="@+id/RMO_zone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8sp"
