--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -52,7 +52,7 @@
                 app:cardCornerRadius="8sp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:background="@color/purple_178"
+                    android:background="@color/orange_2B"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -67,9 +67,10 @@
                         android:layout_height="wrap_content">
 
                         <ImageView
-                            android:background="@color/blue_light"
+                            android:background="@color/white"
                             android:layout_width="70sp"
-                            android:layout_height="70sp"/>
+                            android:layout_height="70sp"
+                            android:src="@drawable/logo" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -157,7 +158,7 @@
                         <TextView
                             android:layout_marginStart="5sp"
                             android:layout_width="wrap_content"
-                            android:layout_height="24sp"
+                            android:layout_height="wrap_content"
                             android:text="alexbrayanperezblanco@gmail.com"/>
 
 
@@ -180,8 +181,8 @@
                         <TextView
                             android:layout_marginStart="5sp"
                             android:layout_width="wrap_content"
-                            android:layout_height="24sp"
-                            android:text="Santa Clara Fuerte #47(AyB)"/>
+                            android:layout_height="wrap_content"
+                            android:text="@string/direcc_admin" />
 
 
                     </LinearLayout>
@@ -226,7 +227,7 @@
                         android:layout_marginTop="4sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:text="@string/sobre_nosotros_desc"
                         android:layout_marginBottom="10sp"/>
 
                 </LinearLayout>
